# Twitch-Channel-Points-Miner-v3-Scraper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/: FUNDING.md
tests/: test_app.py  test_auth.py  test_config.py  test_configure.py  test_scrapers.py
tools/: configure.py
twitch_miner_scraper/: __init__.py  app.py  auth.py  badges.py  cli.py  config.py  container_entrypoint.py  drops.py  gist.py  http.py
